# yal

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  readme.txt
examples/: custom_formatting.cpp  custom_printers.cpp  custom_sinks.cpp  default_settings.cpp
include/yal/: abstract_sink.h  core.h  entries.h  formatter.h  items.h  printers.h  rolling_file.h  severities.h  sinks.h  utils.h  yal.h
src/: core.cpp  entries.cpp  items.cpp  printers.cpp  rolling_file.cpp  severities.cpp  sinks.cpp  utils.cpp
tests/: CMakeLists.txt  main.cpp
